--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi[standard,standart]>=0.129.0",
     "ipykernel>=7.2.0",
     "pandas>=3.0.1",
+    "pytest>=9.0.2",
     "requests>=2.32.5",
     "uvicorn>=0.41.0",
 ]
